# FileCounterPro

./: .gitignore  ActivityMonitor.swift  ActivityTracker.swift  AppIcon.icns  ContentView.swift  DiskMonitor.swift  DriveCleaner.swift  DuplicateFinderView.swift  DuplicateScanner.swift  FileCounter.swift  FileCounterApp.swift  GPUSideBySideView.swift  GameAdvisorView.swift  GameDatabase.swift  GameHUDOverlay.swift  GameHintEngine.swift  GameScanner.swift  HardwareAnalyzer.swift  LICENSE  LargeFileScanner.swift  LivePowerMonitor.swift  LiveSceneAnalyzer.swift  MacGamingEstimator.swift  MacGamingEstimatorView.swift  NetworkMonitor.swift  README.md  SciFiTheme.swift  SmartUninstaller.swift  SmartUninstallerView.swift  SystemJunkScanner.swift  SystemJunkView.swift  SystemMonitor.swift  ZipCreatorView.swift  ZipEngine.swift  build.sh  fix_animations.py  fix_animations2.py  testExtract.swift  testGPS.swift  testScanner.swift  (+1 more)
.github/workflows/: linux-appimage.yml  release.yml
linux/: CMakeLists.txt  qml.qrc
linux/qml/: DashboardView.qml  HardwareAnalyzerView.qml  Main.qml  SciFiTheme.qml  VirusScannerView.qml  qmldir
linux/src/: BackendInfo.cpp  BackendInfo.h  HardwareAnalyzerBackend.cpp  HardwareAnalyzerBackend.h  VirusScannerBackend.cpp  VirusScannerBackend.h  main.cpp
